--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "react-loader-spinner": "^5.3.4",
+    "react-social-icons": "^5.15.0",
     "react-toastify": "^9.1.1"
   }
 }
