--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
+    "react-hot-toast": "^2.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-social-icons": "^5.15.0",
     "react-toastify": "^9.1.1"
