--- a/config/.env
+++ b/config/.env
@@ -1,3 +1,3 @@
 PORT=5001
-DB_URI=mongodb+srv://oleksandr:888Infinity@cluster0.svhdhds.mongodb.net/fishing?retryWrites=true&w=majority
+DB_URI=mongodb+srv://oleksandr:888Infinity@cluster0.svhdhds.mongodb.net/hobby?retryWrites=true&w=majority
 FIRST_ITEM_COOR=50.552046, 30.565829
