--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines":{"node": ">=14.20.1"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production node backend/server.js",
+    "start": "node backend/server.js",
     "dev": "cross-env NODE_ENV=development nodemon backend/server.js",
     "client": "npm start --prefix frontend"
   },
